@@ -1,5 +1,6 @@
 Version 2.9, xx, xxxx, xxxx
 
+109. Fix logMsg() on LP64 architectures.
 108. Produce an error if trying to create a device name longer than 
      H2_DEV_MAX_DEVICE_NAME
 107. Make remotePosterLib/posterServ LP64 safe.
